Overflow hidden for homepage. Fixes #96.
Need to keep our eyes on this that this doesn't break anything.

--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -1,3 +1,7 @@
+.page-home {
+	overflow-x: hidden;
+}
+
 section.home {
 	// == Home Grid == //
 	$start: 1;
